src/main/minigo/parser/MiniGoParser.py
# Generated from main/minigo/parser/MiniGo.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MiniGoParser ( Parser ):

    grammarFileName = "MiniGo.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'if'", "'else'", 
                     "'for'", "'return'", "'func'", "'type'", "'struct'", 
                     "'interface'", "'const'", "'var'", "'continue'", "'break'", 
                     "'range'", "'int'", "'float'", "'string'", "'boolean'", 
                     "'true'", "'false'", "'nil'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "','", "';'", "':'", "'.'", "'='", "':='", "'+='", 
                     "'-='", "'*='", "'/='", "'%='", "'||'", "'&&'", "'!'", 
                     "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'+'", 
                     "'-'", "'*'", "'/'", "'%'" ]

    symbolicNames = [ "<INVALID>", "DECIMAL_LIT", "BINARY_LIT", "OCTAL_LIT", 
                      "HEX_LIT", "FLOAT_LIT", "STRING_LIT", "IF", "ELSE", 
                      "FOR", "RETURN", "FUNC", "TYPE", "STRUCT", "INTERFACE", 
                      "CONST", "VAR", "CONTINUE", "BREAK", "RANGE", "INT", 
                      "FLOAT", "STRING", "BOOLEAN", "TRUE", "FALSE", "NIL", 
                      "ID", "LINE_COMMENT", "BLOCK_COMMENT", "L_PAREN", 
                      "R_PAREN", "L_CURLY", "R_CURLY", "L_BRACKET", "R_BRACKET", 
                      "COMMA", "SEMI", "COLON", "DOT", "ASSIGN", "DECLARE_ASSIGN", 
                      "PLUS_ASSIGN", "MINUS_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", 
                      "MOD_ASSIGN", "LOGICAL_OR", "LOGICAL_AND", "LOGICAL_NOT", 
                      "EQUALS", "NOT_EQUALS", "LESS", "LESS_OR_EQUALS", 
                      "GREATER", "GREATER_OR_EQUALS", "PLUS", "MINUS", "STAR", 
                      "DIV", "MOD", "NEW_LINE", "WS", "ERROR_CHAR", "ILLEGAL_ESCAPE", 
                      "UNCLOSE_STRING" ]

    RULE_program = 0
    RULE_decl_list = 1
    RULE_decl = 2
    RULE_var_decl = 3
    RULE_var_decl_with_initialization = 4
    RULE_const_decl = 5
    RULE_struct_decl = 6
    RULE_struct_fields = 7
    RULE_struct_field = 8
    RULE_interface_decl = 9
    RULE_interface_methods = 10
    RULE_interface_method = 11
    RULE_params_list = 12
    RULE_params_list_prime = 13
    RULE_func_decl = 14
    RULE_method_decl = 15
    RULE_block_stmt = 16
    RULE_stmt_list = 17
    RULE_stmt = 18
    RULE_assign_stmt = 19
    RULE_lhs = 20
    RULE_rhs = 21
    RULE_branch_stmt = 22
    RULE_for_stmt = 23
    RULE_for_basic_stmt = 24
    RULE_for_iter_stmt = 25
    RULE_for_range_stmt = 26
    RULE_expr_list = 27
    RULE_expr_prime = 28
    RULE_sub_expr = 29
    RULE_expr = 30
    RULE_expr6 = 31
    RULE_expr5 = 32
    RULE_expr4 = 33
    RULE_expr3 = 34
    RULE_expr2 = 35
    RULE_expr1 = 36
    RULE_nil_lit = 37
    RULE_boolean_lit = 38
    RULE_int_lit = 39
    RULE_struct_lit = 40
    RULE_struct_lit_fields = 41
    RULE_struct_lit_fields_prime = 42
    RULE_struct_lit_field = 43
    RULE_array_lit = 44
    RULE_array_lit_elements = 45
    RULE_array_lit_elements_list = 46
    RULE_array_lit_element = 47
    RULE_non_array_literal = 48
    RULE_literal = 49
    RULE_id_list_cm = 50
    RULE_list_ac = 51
    RULE_call = 52
    RULE_dimension_list_expr = 53
    RULE_dimension_expr = 54
    RULE_dimension_list = 55
    RULE_dimension = 56
    RULE_array_type = 57
    RULE_primitive_type = 58
    RULE_data_type = 59
    RULE_eos = 60
    RULE_assignment_operator = 61
    RULE_relational_operator = 62

    ruleNames =  [ "program", "decl_list", "decl", "var_decl", "var_decl_with_initialization", 
                   "const_decl", "struct_decl", "struct_fields", "struct_field", 
                   "interface_decl", "interface_methods", "interface_method", 
                   "params_list", "params_list_prime", "func_decl", "method_decl", 
                   "block_stmt", "stmt_list", "stmt", "assign_stmt", "lhs", 
                   "rhs", "branch_stmt", "for_stmt", "for_basic_stmt", "for_iter_stmt", 
                   "for_range_stmt", "expr_list", "expr_prime", "sub_expr", 
                   "expr", "expr6", "expr5", "expr4", "expr3", "expr2", 
                   "expr1", "nil_lit", "boolean_lit", "int_lit", "struct_lit", 
                   "struct_lit_fields", "struct_lit_fields_prime", "struct_lit_field", 
                   "array_lit", "array_lit_elements", "array_lit_elements_list", 
                   "array_lit_element", "non_array_literal", "literal", 
                   "id_list_cm", "list_ac", "call", "dimension_list_expr", 
                   "dimension_expr", "dimension_list", "dimension", "array_type", 
                   "primitive_type", "data_type", "eos", "assignment_operator", 
                   "relational_operator" ]

    EOF = Token.EOF
    DECIMAL_LIT=1
    BINARY_LIT=2
    OCTAL_LIT=3
    HEX_LIT=4
    FLOAT_LIT=5
    STRING_LIT=6
    IF=7
    ELSE=8
    FOR=9
    RETURN=10
    FUNC=11
    TYPE=12
    STRUCT=13
    INTERFACE=14
    CONST=15
    VAR=16
    CONTINUE=17
    BREAK=18
    RANGE=19
    INT=20
    FLOAT=21
    STRING=22
    BOOLEAN=23
    TRUE=24
    FALSE=25
    NIL=26
    ID=27
    LINE_COMMENT=28
    BLOCK_COMMENT=29
    L_PAREN=30
    R_PAREN=31
    L_CURLY=32
    R_CURLY=33
    L_BRACKET=34
    R_BRACKET=35
    COMMA=36
    SEMI=37
    COLON=38
    DOT=39
    ASSIGN=40
    DECLARE_ASSIGN=41
    PLUS_ASSIGN=42
    MINUS_ASSIGN=43
    MUL_ASSIGN=44
    DIV_ASSIGN=45
    MOD_ASSIGN=46
    LOGICAL_OR=47
    LOGICAL_AND=48
    LOGICAL_NOT=49
    EQUALS=50
    NOT_EQUALS=51
    LESS=52
    LESS_OR_EQUALS=53
    GREATER=54
    GREATER_OR_EQUALS=55
    PLUS=56
    MINUS=57
    STAR=58
    DIV=59
    MOD=60
    NEW_LINE=61
    WS=62
    ERROR_CHAR=63
    ILLEGAL_ESCAPE=64
    UNCLOSE_STRING=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl_list(self):
            return self.getTypedRuleContext(MiniGoParser.Decl_listContext,0)


        def EOF(self):
            return self.getToken(MiniGoParser.EOF, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MiniGoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.decl_list()
            self.state = 127
            self.match(MiniGoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decl_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MiniGoParser.DeclContext,0)


        def decl_list(self):
            return self.getTypedRuleContext(MiniGoParser.Decl_listContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_decl_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl_list" ):
                return visitor.visitDecl_list(self)
            else:
                return visitor.visitChildren(self)




    def decl_list(self):

        localctx = MiniGoParser.Decl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl_list)
        try:
            self.state = 133
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.decl()
                self.state = 130
                self.decl_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Var_declContext,0)


        def eos(self):
            return self.getTypedRuleContext(MiniGoParser.EosContext,0)


        def const_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Const_declContext,0)


        def struct_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Struct_declContext,0)


        def interface_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Interface_declContext,0)


        def func_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Func_declContext,0)


        def method_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Method_declContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MiniGoParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 153
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.var_decl()
                self.state = 136
                self.eos()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.const_decl()
                self.state = 139
                self.eos()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 141
                self.struct_decl()
                self.state = 142
                self.eos()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 144
                self.interface_decl()
                self.state = 145
                self.eos()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 147
                self.func_decl()
                self.state = 148
                self.eos()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 150
                self.method_decl()
                self.state = 151
                self.eos()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MiniGoParser.VAR, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def data_type(self):
            return self.getTypedRuleContext(MiniGoParser.Data_typeContext,0)


        def var_decl_with_initialization(self):
            return self.getTypedRuleContext(MiniGoParser.Var_decl_with_initializationContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_var_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl" ):
                return visitor.visitVar_decl(self)
            else:
                return visitor.visitChildren(self)




    def var_decl(self):

        localctx = MiniGoParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_decl)
        try:
            self.state = 159
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 155
                self.match(MiniGoParser.VAR)
                self.state = 156
                self.match(MiniGoParser.ID)
                self.state = 157
                self.data_type()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 158
                self.var_decl_with_initialization()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_decl_with_initializationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MiniGoParser.VAR, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def data_type(self):
            return self.getTypedRuleContext(MiniGoParser.Data_typeContext,0)


        def ASSIGN(self):
            return self.getToken(MiniGoParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(MiniGoParser.ExprContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_var_decl_with_initialization

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl_with_initialization" ):
                return visitor.visitVar_decl_with_initialization(self)
            else:
                return visitor.visitChildren(self)




    def var_decl_with_initialization(self):

        localctx = MiniGoParser.Var_decl_with_initializationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_decl_with_initialization)
        try:
            self.state = 171
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 161
                self.match(MiniGoParser.VAR)
                self.state = 162
                self.match(MiniGoParser.ID)
                self.state = 163
                self.data_type()
                self.state = 164
                self.match(MiniGoParser.ASSIGN)
                self.state = 165
                self.expr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 167
                self.match(MiniGoParser.VAR)
                self.state = 168
                self.match(MiniGoParser.ID)
                self.state = 169
                self.match(MiniGoParser.ASSIGN)
                self.state = 170
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Const_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(MiniGoParser.CONST, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(MiniGoParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(MiniGoParser.ExprContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_const_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConst_decl" ):
                return visitor.visitConst_decl(self)
            else:
                return visitor.visitChildren(self)




    def const_decl(self):

        localctx = MiniGoParser.Const_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_const_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.match(MiniGoParser.CONST)
            self.state = 174
            self.match(MiniGoParser.ID)
            self.state = 175
            self.match(MiniGoParser.ASSIGN)
            self.state = 176
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(MiniGoParser.TYPE, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def STRUCT(self):
            return self.getToken(MiniGoParser.STRUCT, 0)

        def L_CURLY(self):
            return self.getToken(MiniGoParser.L_CURLY, 0)

        def struct_fields(self):
            return self.getTypedRuleContext(MiniGoParser.Struct_fieldsContext,0)


        def R_CURLY(self):
            return self.getToken(MiniGoParser.R_CURLY, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_struct_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStruct_decl" ):
                return visitor.visitStruct_decl(self)
            else:
                return visitor.visitChildren(self)




    def struct_decl(self):

        localctx = MiniGoParser.Struct_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_struct_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 178
            self.match(MiniGoParser.TYPE)
            self.state = 179
            self.match(MiniGoParser.ID)
            self.state = 180
            self.match(MiniGoParser.STRUCT)
            self.state = 181
            self.match(MiniGoParser.L_CURLY)
            self.state = 182
            self.struct_fields()
            self.state = 183
            self.match(MiniGoParser.R_CURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_fieldsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def struct_field(self):
            return self.getTypedRuleContext(MiniGoParser.Struct_fieldContext,0)


        def struct_fields(self):
            return self.getTypedRuleContext(MiniGoParser.Struct_fieldsContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_struct_fields

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStruct_fields" ):
                return visitor.visitStruct_fields(self)
            else:
                return visitor.visitChildren(self)




    def struct_fields(self):

        localctx = MiniGoParser.Struct_fieldsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_struct_fields)
        try:
            self.state = 189
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 185
                self.struct_field()
                self.state = 186
                self.struct_fields()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 188
                self.struct_field()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_fieldContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def data_type(self):
            return self.getTypedRuleContext(MiniGoParser.Data_typeContext,0)


        def eos(self):
            return self.getTypedRuleContext(MiniGoParser.EosContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_struct_field

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStruct_field" ):
                return visitor.visitStruct_field(self)
            else:
                return visitor.visitChildren(self)




    def struct_field(self):

        localctx = MiniGoParser.Struct_fieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_struct_field)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 191
            self.match(MiniGoParser.ID)
            self.state = 192
            self.data_type()
            self.state = 193
            self.eos()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Interface_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(MiniGoParser.TYPE, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def INTERFACE(self):
            return self.getToken(MiniGoParser.INTERFACE, 0)

        def L_CURLY(self):
            return self.getToken(MiniGoParser.L_CURLY, 0)

        def interface_methods(self):
            return self.getTypedRuleContext(MiniGoParser.Interface_methodsContext,0)


        def R_CURLY(self):
            return self.getToken(MiniGoParser.R_CURLY, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_interface_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInterface_decl" ):
                return visitor.visitInterface_decl(self)
            else:
                return visitor.visitChildren(self)




    def interface_decl(self):
